fix css grid for firefox overflow

--- a/scss/01-tools/mixins/_grid.scss
+++ b/scss/01-tools/mixins/_grid.scss
@@ -31,7 +31,7 @@
 
   display: grid;
   grid-template-rows: repeat(var(--rows, 1), 1fr);
-  grid-template-columns: repeat(var(--columns, #{$grid-columns}), 1fr);
+  grid-template-columns: repeat(var(--columns, #{$grid-columns}), minmax(0, 1fr));
 }
 
 /// Output a css grid column
